2009-12-31 Frank Kober <goemusic@yahoo.fr>
	* MIDI control handling modified: controllers can be attributed to
	mute checkbox and various sliders by context menu and MIDI 
	learn/forget. 
	Each module holds a control/controller item list, incoming 
	controllers are	handled in arpdata.cpp
	* midicctable.*: control editor implementation started
	
2009-12-23 Frank Kober <goemusic@yahoo.fr>
    * *lfo*.cpp: implement mouse wheel on lfoscreen to change offset of
    LFO waveform. This is of interest mainly for the custom drawn wave
    
2009-12-06 Frank Kober <goemusic@yahoo.fr>
    * mainwindow.cpp: GUI settings stored through saveState() Qt function
    applying to *.qma files and .qmidiarprc file as a Hex-encoded part.
    * passwidget.cpp: compact style for modules is now default 

2009-12-04 Frank Kober <goemusic@yahoo.fr>
    * seqdriver.*, arpdata.*, *widget.*: all modules MIDI-mutable,
    mute MIDI controller depends on position in tabbed dock (order of
    module creation) instead of position in midiArpList
    * passwidget.*, mainwindow.*, main.h, *widget.*: "compact style" can
    be checked in passwidget acting on font size, grid spacing and
    element heights for all modules, to allow for placing several
    modules next to each other on desktop. compactStyle property
    added to rc-file items.
    * man/*/qmidiarp.1: updated
    * NEWS: updated
    
2009-11-29 Frank Kober <goemusic@yahoo.fr>
    * midi*.*, *widget.*, mainwindow.*: goodbye tabWidget, hello 
    dockWidget, all modules are floatable, by default tabified
    Dock Windows now
    * lfowidget.*: small pixmaps for waveform combobox included
    * pixmaps/lfow*.xpm: pixmaps for waveform combobox added
    
2009-11-23 Frank Kober <goemusic@yahoo.fr>
    * midilfo.cpp, midiseq.cpp: small computation optimization
    * midiarp.cpp: debug printf removed
    * seqwidget.cpp: keyboard shortcuts cleaned up
    * man/de/qmidiarp.1: German translation of manpage added
    provided by Robert Dietrich