@@ -195,8 +195,6 @@ void LfoScreen::mouseMoveEvent(QMouseEvent *event)
                             (w - 2 * LFOSCREEN_HMARGIN), 
                 1. - ((double)mouseY - LFOSCREEN_VMARGIN) / 
                 (h - 2 * LFOSCREEN_VMARGIN), event->buttons());
-    const int buttons = event->buttons();
-    printf("Buttons move: %d\n",buttons);
 }
 
 void LfoScreen::mousePressEvent(QMouseEvent *event)
