@@ -432,12 +432,12 @@ Mausrad: Verschieben des Offsets</translation>
         <translation>Frei</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="577"/>
+        <location filename="../lfowidget.cpp" line="589"/>
         <source>Delete &quot;%1&quot;?</source>
         <translation>&quot;%1&quot; löschen?</translation>
     </message>
     <message>
-        <location filename="../lfowidget.cpp" line="596"/>
+        <location filename="../lfowidget.cpp" line="608"/>
         <source>New Name</source>
         <translation>Neuer Name</translation>
     </message>
